@@ -13,7 +13,7 @@ S3method(prcomp,annmatrix)
 S3method(stack,annmatrix)
 S3method(Ops,annmatrix)
 S3method(chooseOpsMethod,annmatrix)
-export(annmatrix)
+export(as.annmatrix)
 export(is.annmatrix)
 export(rowanns)
 export("rowanns<-")
