@@ -10,7 +10,7 @@
 #' columns (i.e. meta-data about collected samples). But \code{annmatrix}
 #' objects are also expected be useful in various other contexts.
 #'
-#' \code{annmatrix()} constructs an object of class \code{annmatrix}. The
+#' \code{as.annmatrix()} converts a matrix to an \code{annmatrix} object. The
 #' function expects \code{x} to be a \code{matrix} and \code{rowanns} and
 #' \code{colanns} to be of class \code{data.frame}. If the passed objects are
 #' of a different class they will be converted via the use of \code{as.matrix}
@@ -67,7 +67,7 @@
 #' rowdata <- data.frame(chr = sample(c("chr1", "chr2"), 20, replace = TRUE),
 #'                       pos = runif(20, 0, 1000000))
 #'
-#' X <- annmatrix(x, rowdata, coldata)
+#' X <- as.annmatrix(x, rowdata, coldata)
 #'
 #' is.matrix(x)
 #' is.matrix(X)
@@ -119,7 +119,7 @@
 #' @author Karolis Koncevičius
 #' @name annmatrix
 #' @export
-annmatrix <- function(x, rann, cann) {
+as.annmatrix <- function(x, rann, cann) {
 
   if (missing(x)) {
     x <- matrix(nrow = 0, ncol = 0)
