@@ -23,7 +23,7 @@
 #' rowdata <- data.frame(chr = sample(c("chr1", "chr2"), 20, replace = TRUE),
 #'                       pos = runif(20, 0, 1000000))
 #'
-#' X <- annmatrix(x, rowdata, coldata)
+#' X <- as.annmatrix(x, rowdata, coldata)
 #'
 #' print(X)
 #' print(X, 10, 5)
@@ -32,7 +32,7 @@
 #' # also works with a list-based matrix
 #' x <- matrix(list(mtcars, iris3, USAccDeaths, rivers), ncol=2)
 #' print(x)
-#' X <- annmatrix(x)
+#' X <- as.annmatrix(x)
 #' print(X)
 #'
 #' @author Karolis Koncevičius
