@@ -28,7 +28,7 @@ coldata <- data.frame(group  = rep(c("case", "control"), each = 5),
 rowdata <- data.frame(chr = sample(c("chr1", "chr2"), 20, replace = TRUE),
                       pos = runif(20, 0, 1000000))
 
-X <- annmatrix(x, rowdata, coldata)
+X <- as.annmatrix(x, rowdata, coldata)
 
 # stack all information into a long-format data.frame
 Y <- stack(X)
